<resources>
    <string name="app_name">Quản Lí Chi Tieu</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="facebook_app_id">1479821226167301</string>
    <string name="fb_login_protocol_scheme">fb2740707952829291</string>
    <string name="txt_next">Next </string>
    <string name="txt_begin">BẮT ĐẦU</string>
    <string name="txt_title">Quản lý khoản thu</string>
    <string name="txt_intro">App quản lí số tiền giúp bạn</string>
    <string name="txt_khoan_thu">Khoản Thu</string>
    <string name="txt_khoan_chi">Khoản Chi</string>
    <string name="txt_thong_ke">Thống Kê</string>
    <string name="txt_thong_tin">Thông Tin</string>
    <string name="txt_about">About</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_name">Chiếc lá Khô</string>
    <string name="txt_money">Số dư: 1,000,000,000 đ</string>
    <string name="txt_thong_ke_chi">Thống Kê Chi</string>
    <string name="txt_thong_ke_thu">Thống Kê Thu</string>
    <string name="txt_gmail">Cuxuh40@gmail.com</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="txt_title_login">Sign In to continue</string>
    <string name="txt_welcome">WELCOME</string>
    <string name="txt_username">User name</string>
    <string name="txt_pass_word">Pass word</string>
    <string name="btn_login">LOGIN</string>
    <string name="txt_for_got_password">For got password?</string>
    <string name="txt_sign_up">New User? SIGN UP</string>
    <string name="txt_login_with_facebook">Login with Facebook</string>
    <string name="txt_email">Email</string>
    <string name="btn_signup">Signup</string>
    <string name="txt_full_name">Full name</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_confirm_pass_word">Confirm  Passwword</string>
    <string name="txt_gioi_thieu">Giới thiệu</string>
    <string name="txt_tk">Thống Kê</string>
    <string name="txt_emai_profilel">Cuxuh40@gmail.com</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="btn_up_date_profile">Update profile</string>
    <string name="txt_sodu">Nhập số dư tài khoản</string>
    <string name="txt_vnd">VND</string>
    <string name="txt_tiep_theo">Tiếp Theo</string>
    <string name="btn_up_date_email">Update Email</string>
    <string name="txt_title_email">Nhập địa chỉ Email của bạn</string>
    <string name="txt_change_Password">Change Password</string>
    <string name="txt_pass_word_old">Old Password</string>
    <string name="txt_pass_word_new">New Password</string>
    <string name="txt_pass_word_verify">Verify</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_faild">"Đăng nhập thất bại "</string>
    <string name="txt_loai_chi">"Loai chi : "</string>
    <string name="txt_trang_thai">Trạng Thái : Hoàn thành</string>
    <string name="txt_ten_khoan_thu">Tên Khoản</string>
    <string name="txt_date">Ngày</string>
    <string name="txt_so_tien">Số Tiền</string>
    <string name="txt_ghi_chu">Ghi Chú</string>
    <string name="txt_ma_loai">Mã Loại</string>
    <string name="txt_app_loai_chi">Thêm Loại Chi</string>
    <string name="txt_app_loai_thu">Thêm Loại Thu</string>
    <string name="txt_ten_loai_chi">Tên Loại Chi</string>
    <string name="txt_ten_loai_thu">Tên Loại Thu</string>
    <string name="txt_add">Thêm</string>
    <string name="txt_close">Thoát</string>
    <string name="txt_add_khoan_chi">Thêm Khoản Chi</string>
    <string name="txt_ten_khoan_chi">Tên Khoản Chi</string>
    <string name="txt_loai_thu">Loại thu</string>
    <string name="txt_add_kc">Thêm Khoản Chi</string>
    <string name="txt_add_kt">Thêm Khoản Thu</string>
    <string name="txt_ngay_chi">Ngày chi</string>
    <string name="txt_ngay_thu">Ngày thu</string>
    <string name="txt_money_number">Số Tiền</string>
    <string name="txt_thu">Thu</string>
    <string name="txt_chi">Chi</string>
    <string name="txt_start">Ngày bắt đầu</string>
    <string name="txt_end">Ngày kết thúc</string>
    <string name="txt_tim_kiem">Tìm</string>
    <string name="txt_du_lieu">Dữ liệu thống kê chi</string>
    <string name="txt_du_thu">Dữ liệu thống kê thu</string>
    <string name="txt_r">R</string>
    <string name="txt_python">Python</string>
    <string name="txt_c">C++</string>
    <string name="txt_java">Java</string>
    <string name="txt_title1">Tỷ lệ phần trăm các khoản\n Thu - Chi</string>
    <string name="txt_chi_phi">CHI PHÍ</string>
    <string name="txt_thu_nhap">THU NHP</string>
    <string name="txt_tong_thu">Tổng thu</string>
    <string name="txt_0">0</string>
    <string name="txt_tong_chi">Tổng Chi</string>
    <string name="txt_ngay">Ngày</string>
    <string name="txt_tuan">Tuần</string>
    <string name="txt_thang">Tháng</string>
    <string name="txt_nam">Năm</string>
    <string name="txt_number">Tổng số tiền chi là : </string>
    <string name="txt_so_du">Số dư :</string>
    <string name="txt_or">OR</string>
    <string name="txt_nhap_so_tien">Nhập số tền của bạn</string>
    <string name="txt_so_tien_cua_ban">Số tiền của bạn là?</string>
    <string name="txt_ok">OK</string>
    <string name="txt_close_dialog">CLOSE</string>
    <string name="txt_chon_ngay">Chọn Ngày</string>
    <string name="txt_cham">....</string>
    <string name="txt_ban_dau">Số tiền ban đầu : 150000</string>
    <string name="txt_chon_loai_chi">Chọn loại chi =></string>
    <string name="txt_chon_loai_thu">Chọn loại thu =></string>
    <string name="txt_loading">Loading...</string>
</resources>