<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/txt_add_kt"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/txt_ten_khoan_thu"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bo_goc_item2"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="13dp"
                android:text="@string/txt_ngay_chi"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/date_picker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/img"
            tools:ignore="ContentDescription" />
        <!--        <DatePicker-->
        <!--            android:id="@+id/date_picker"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:calendarViewShown="false"-->
        <!--            style="@style/CustomDatePickerStyle" />-->
    </TableRow>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edt_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/txt_money_number"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bo_goc_item2"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tv_loai_thu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_chon_loai_thu"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_loai"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="18sp"
            android:theme="@style/Spinner"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/txt_ghi_chu"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text="@string/txt_add"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text="@string/txt_close"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </TableRow>

</LinearLayout>