<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include
        android:id="@+id/menu"
        layout="@layout/actionbar_menu" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_person"
        app:civ_border_color="@color/tab_indicator_gray"
        app:civ_border_width="3dp"
        tools:ignore="MissingClass" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txt_full_name"
        android:layout_marginHorizontal="50dp"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#5E5D5D"
        android:textSize="20sp"
        tools:ignore="Autofill" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_500"
        android:text="@string/btn_up_date_profile"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#5E5D5D"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_500"
        android:text="@string/btn_up_date_email"
        android:textColor="#FFF"
        android:textSize="20sp" />
</LinearLayout>