<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/menu"
        layout="@layout/actionbar_menu" />

    <EditText
        android:id="@+id/edt_pass_word_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="200dp"
        android:hint="@string/txt_pass_word_new"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#5E5D5D"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_pass_word_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_pass_word_verify"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#5E5D5D"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_passworg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_500"
        android:text="@string/txt_change_Password"
        android:textColor="#FFF"
        android:textSize="18sp" />


</LinearLayout>