<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginTop="5dp"
    card_view:cardBackgroundColor="@color/purple_500"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:src="@drawable/tuiitien"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_kt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ten_khoan_thu"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_date_kt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_money_kt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_so_tien"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_khoan_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ma_loai"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_note_kt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ghi_chu"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_update_kt"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@android:drawable/ic_menu_edit"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_delete_kt"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@android:drawable/ic_delete"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </TableRow>

</androidx.cardview.widget.CardView>