<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_900"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_sodu"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/txt_vnd"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />
    </TableRow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:background="@color/purple_200"
        android:paddingHorizontal="30dp"
        android:text="@string/txt_tiep_theo"
        android:textAllCaps="false" />
</LinearLayout>